# odd-character

./: README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
classes/: color.py  colors.py  equipmentprovider.py  format.py  hireprovider.py  petprovider.py  starter.py  starterprovider.py
data/: equipment.json  starters.json
data/equipment/: 1.csv
functions/: arcana.py  equipment.py  jsonhelper.py  roll.py  styling.py
src/odd_character/: cli.py  main.py
src/odd_character/classes/: arcanaprovider.py  hireprovider.py  outputtype.py  petprovider.py  starter.py  starterprovider.py
src/odd_character/functions/: jsonhelper.py  roll.py  styling.py
tests/: test_hireprovider.py  test_petprovider.py  test_starterprovider.py
