[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "odd-character"
version = "0.1.0"
description = "Into the Odd TTRPG character generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"odd_character.data" = ["*.json"]

[project.scripts]
odd-character = "odd_character.cli:main"
